chore: introspected all database tables to schema.prisma

--- a/server/.env
+++ b/server/.env
@@ -7,4 +7,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://neondb_owner:npg_8s7rcZmHTieh@ep-sweet-paper-a1qtmdjx-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL="postgresql://neondb_owner:npg_8s7rcZmHTieh@ep-sweet-paper-a1qtmdjx-pooler.ap-southeast-1.aws.neon.tech/comfycravings?sslmode=require"
