--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,24 @@
 {
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "node": "^23.11.0",
+    "pg": "^8.14.1"
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {
     "prisma": "^6.6.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "postinstall": "prisma generate"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
